public/css/master.css
/* ... */
ul {
    margin-top: 0;
    padding-left: 1em;
}

img {
    border-radius: var(--border-radius);
    width: 100%;
    height: auto;
}

section>p:last-of-type {
    margin-bottom: 2em;
}

button {
    display: inline-block;
    background-color: var(--color-primary);
    border-radius: var(--border-radius);
    padding: 0.8em 1.3em;
    margin-left: auto;
    color: var(--color-bg-dark);
    font-size: 0.95em;
    font-weight: 700;
    border: none;
    cursor: pointer;

    &:hover {
        background-color: var(--color-primary-light);
        color: var(--color-bg-dark);
    }

    &:focus {
        background-color: var(--color-primary-light);
        color: var(--color-bg-dark);
        outline: none;
    }
}

.button {
    /* to style a href to look exactly like a button */
    display: inline-block;
    background-color: var(--color-primary);
    border-radius: var(--border-radius);
    padding: 0.55em 1.1em;
    margin-right: auto;
    color: var(--color-bg-dark);
    font-weight: 700;
    border: none;
    text-decoration: none;
    margin-bottom: 1em;

    &:hover {
        background-color: var(--color-primary-light);
        color: var(--color-bg-dark);
    }

    &:focus {
        background-color: var(--color-primary-light);
        color: var(--color-bg-dark);
        outline: none;
    }
}

.flashbox {
    background-color: var(--color-bg-dark);
    border-radius: var(--border-radius);
    padding: 0.5em 1.4em;
    margin: 0.8em auto 0 auto;
    font-size: 1.2rem;
    width: fit-content;

    & p {
        margin: 0
    }
}

span {
    /* Used to shrink arrows on buttons */
    font-size: 0.8em;
}

.twoColumns {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    gap: 1em;
    margin-bottom: 2.5em;

    @media (max-width: 40em) {
        display: inline-block;
    }
}



/* ---------- Form input related ---------- */
select {
    font-family: "Winky Sans", sans-serif;
    font-size: 1em;
    font-weight: 400;
    background-color: var(--color-bg-dark);
    color: var(--color-light);
    border: none;
    border-radius: var(--border-radius);
    padding: 0.8em 1em;
    width: 100%;

    &:focus {
        background-color: var(--color-bg-light);
        outline: none;
    }
}

input::file-selector-button {
    font-family: "Winky Sans", sans-serif;
    font-weight: 600;
    background-color: var(--color-bg-light);
    color: var(--color-primary);
    padding: 0.5em 1em;
    margin-right: 0.8em;
    border-radius: var(--border-radius);
    border: none;
}

.filterBox {
    display: flex;
    flex-direction: row;
    margin-bottom: 2em;
    gap: 1em;
    padding: 0.4em 1em;

    & label {
        width: fit-content;
        margin: auto 0;
    }

    & select {
        width: fit-content;
        padding: 0.25em 0.7em;
    }
}

.contact {
    margin-top: 3em;


    & p {
        width: 60%;
    }
}

.form-error {
    color: var(--color-primary);
    margin-top: 0;
    margin-bottom: 0.5em;
    width: auto;
}

form {
    background-color: var(--color-bg-opague);
    backdrop-filter: blur(var(--blur-ammount));
    border-radius: var(--border-radius);
    margin-top: 1em;

    display: flex;
    flex-direction: column;
    padding: 1.2em;

    &>div {
        display: flex;
        column-gap: 1em;

        >div {
            flex: 1;
        }

        @media (max-width: 40em) {
            flex-direction: column;
        }
    }

    label {
        display: block;
        margin-bottom: 0.5em;
        font-weight: 600;
        padding-left: 0.2em;
    }

    & button {
        margin: auto 0 auto auto;
    }


    & textarea {
        font-size: 1em;
        min-height: 10em;
    }
}

& input,
textarea {
    font-family: "Winky Sans", sans-serif;
    width: 100%;
    box-sizing: border-box;
    padding: 0.75em;
    margin-bottom: 1em;
    color: var(--color-light);
    background-color: var(--color-bg-dark);
    border-radius: var(--border-radius);
    border: none;
    font-size: 1em;
    resize: vertical;

    &:focus {
        background-color: var(--color-bg-light);
        outline: none;
    }
}

.slimForm {
    max-width: 25em;
    margin: 0 auto;
}

.hiddenForm {
    background-color: unset;
    backdrop-filter: unset;
    border-radius: unset;
    margin: 0;
    padding: 0;
    display: block;
}

.redBg {
    background-color: var(--color-red);
}

.disclaimer {
    font-size: 0.85em;
}


/* ---------- Section classes for layout ---------- */
.imageConstrained {
    max-width: 30rem;
}

.imageRight {
    display: grid;
    grid-template-columns: 1fr;
    column-gap: 1em;
    row-gap: 1em;

    & h1,
    h2,
    h3 {
        grid-column: 1 / -1;
        margin-top: 0;
        margin-bottom: 0;
        margin-right: auto;
    }

    & p {
        margin-top: 0em;
    }

    & li {
        list-style-type: disc;
        padding: 0.2em;
    }

    &:not(:has(h1)) {
        margin-top: 3.5rem;
    }

    @media screen and (min-width: 36em) {
        grid-template-columns: 1fr 1fr;
        column-gap: 3em;
        row-gap: 1em;
    }
}

.imageLeft {
    display: grid;
    grid-template-columns: 1fr;
    column-gap: 1em;
    row-gap: 1em;

    & h1,
    h2,
    h3 {
        grid-column: 1 / -1;
        margin-top: 0;
        margin-bottom: 0;
        margin-right: auto;
    }

    & h1 {
        margin-top: 0;
    }

    & p {
        margin-top: 0em;
    }

    & li {
        list-style-type: disc;
        padding: 0.2em;

    }

    &:not(:has(h1)) {
        margin-top: 3.5rem;
    }

    @media screen and (min-width: 36em) {
        grid-template-columns: 1fr 2fr;
        column-gap: 3em;
        row-gap: 1em;
    }
}
/* ... */

